<resources>
    <string name="app_name">Vidya Question Bank</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="rupees">₹</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="login">Login</string>
    <string name="privacy_warning">By registering you agree to</string>
    <string name="user_registration">User registration terms</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send_verification_code">Send Otp</string>
    <string name="home">Home</string>
    <string name="company_image">ग्रिड छवि</string>
    <string name="text_chemistry">रसायन विज्ञान</string>
    <string name="text_mathematics">गणित</string>
    <string name="text_biology">जीवविज्ञान</string>
    <string name="text_science">विज्ञान</string>
    <string name="text_science_english">Science</string>
    <string name="text_physics">भौतिक विज्ञान</string>
    <string name="please_enter_the_one_time_password">Please Enter the One Time Password</string>
    <string name="please_update_the_app_to_continue">Please update the app to continue</string>
    <string name="update_now">Update Now</string>

    <string name="admob_app_id">ca-app-pub-4214231949040116~8644084695</string>
    <string name="interstitial_ad_id">ca-app-pub-4214231949040116/4206487482</string>
    <string name="banner_ad_unit">ca-app-pub-4214231949040116/6010523742</string>
    <string name="native_advanced_test">ca-app-pub-3940256099942544/2247696110</string>
    <string name="vqb_native_advanced">ca-app-pub-4214231949040116/9556849336</string>
    <string name="adcolony_app_id">app8285162b20ac4109b7</string>
    <string name="adcolony_interstitial">vz5c5633cc72df40e3bb</string>
    <string name="adcolony_banner">vzc84f104f54a147fbb5</string>
    <string name="adcolony_interstitial_test">vzbd00f33636b7461983</string>

    <string name="unity_game_id">3798059</string>
    <string name="unity_interstitial_placement_id">VQBInterstitial</string>

    <string name="know_more">Know more..</string>
    <string name="mathematics">Mathematics</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register_now">Register Now</string>
    <string name="school">School</string>
    <string name="city">City</string>
    <string name="request_a_book">Request a book</string>
    <string name="class_details">Class %1$s U.P. Board</string>
    <string name="profile">Profile</string>
    <string name="reset_password">Reset Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="text_physics_english">Physics</string>
    <string name="text_chemistry_english">Chemistry</string>
    <string name="text_mathematics_english">Mathematics</string>
    <string name="text_biology_english">Biology</string>

    <string name="email_pro">Email: %1$s</string>
    <string name="username">Name: %1$s</string>
    <string name="user_class">Class: %1$s</string>
    <string name="school_pro">School: %1$s</string>
    <string name="contact">Contact: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="free">Free</string>

    <string name="edit_profile">Edit Profile</string>
</resources>
