<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android ="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="28dp">

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/raleway_bold"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_text"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edTv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:errorEnabled="true"
                android:inputType="textEmailAddress"
                android:paddingStart="22dp"
                android:fontFamily="@font/raleway"
                android:paddingEnd="0dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edTv_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                app:errorEnabled="true"
                android:inputType="number"
                android:maxLength="10"
                android:paddingStart="22dp"
                android:fontFamily="@font/raleway"
                android:paddingEnd="0dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/send_verification_code_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Verify Mobile Number"
            android:textColor="#ffffff"
            android:fontFamily="@font/raleway_medium"
            android:background="@drawable/button_gradient"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/sign_with_google"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:padding="8dp"
            android:layout_margin="12dp"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="12dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:clickable="false"
                    android:background="#0000"
                    app:srcCompat="@drawable/ic_google_logo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:textColor="@color/colorBlack"
                    android:text="Sign in with Google"
                    android:layout_marginStart="12dp"
                    android:letterSpacing="-0.05"
                    android:fontFamily="null"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>